Name:                network-address
Version:             0.3.0
Synopsis:            IP data structures and textual representation
Description:         A library for parsing, representing, computing and
                     transforming network addresses such a IPv4, IPv6
                     and subnetworks.
Homepage:            http://github.com/sebnow/haskell-network-address
License:             MIT
License-file:        LICENSE
Author:              Sebastian Nowicki
Maintainer:          sebnow@gmail.com
Category:            Data, Network
Build-type:          Simple
Extra-source-files:  README.md
Cabal-version:       >=1.9.2

Source-Repository head
    type:       git
    location:   git://github.com/sebnow/haskell-network-address.git

Library
  Exposed-modules:
    Data.Network.Address
    Data.Network.Address.IP

  Build-depends:
    base == 4.*,
    Cabal >= 1.9.2 && < 1.23

test-suite test-package
  Type:           exitcode-stdio-1.0
  Main-is:        Test.hs
  Other-modules:
    Test.Data.Network.Address.IP
  Build-depends:
    base == 4.*,
    Cabal >= 1.9.2 && < 1.23,
    QuickCheck == 2.7.*,
    test-framework == 0.8.*,
    test-framework-quickcheck2 == 0.3.*

Benchmark benchmark
  Type:           exitcode-stdio-1.0
  Main-is:          Benchmark.hs
  Build-depends:
    base == 4.*,
    Cabal >= 1.9.2 && < 1.23,
    criterion == 1.1.0.0,
    deepseq >= 1.1
